# ShapeR

./: .gitignore  README.md  custom_data.ipynb  infer_shape.py  pixi.toml  pyproject.toml  setup_cuda.sh  vis.ipynb
dataset/: image_processor.py  shaper_dataset.py
experimental/: workaround_dataproc.py
experimental/example/stuff_animal/: caption.txt
shaper/dataset/: download.py  image_processor.py  point_cloud.py  shaper_dataset.py
shaper/model/: __init__.py  dino_and_ray_feature_extractor.py  download.py  pointcloud_encoder.py  unet.py
shaper/model/dinov2/: LICENSE  __init__.py
shaper/model/dinov2/configs/: __init__.py
shaper/model/dinov2/distributed/: __init__.py
shaper/model/dinov2/eval/: knn.py  linear.py  log_regression.py  metrics.py  setup.py  utils.py
shaper/model/dinov2/fsdp/: __init__.py
shaper/model/dinov2/hub/: __init__.py  backbones.py  classifiers.py  depthers.py  utils.py
shaper/model/dinov2/layers/: __init__.py  attention.py  block.py  dino_head.py  drop_path.py  layer_scale.py  mlp.py  patch_embed.py  swiglu_ffn.py
shaper/model/dinov2/logging/: __init__.py  helpers.py
shaper/model/dinov2/loss/: __init__.py  dino_clstoken_loss.py  (+2 more)
shaper/model/flow_matching/: dualstream_transformer.py  shaper_denoiser.py
shaper/model/structure/: utils.py
shaper/model/text/: hf_embedder.py
shaper/model/vae3d/: attention.py  autoencoder.py  utils.py
shaper/postprocessing/: helper.py
shaper/preprocessing/: camera.py  helper.py  point_cloud.py  pose.py  projection_utils.py  ray_utils.py  tensor_wrapper.py  view_selection_heuristic.py
(+85 files in other folders)
